more memory for integration tests JVM forks